# aozorabunko-extractor

./: .gitignore  README.md  pyproject.toml
src/aozorabunko_extractor/: cli.py
tests/: test_aozorabunko_extractor.py
