[tool.poetry]
authors = ["hppRC <hpp.ricecake@gmail.com>"]
description = ""
homepage = "https://github.com/hpprc/aozorabunko-extractor"
name = "aozorabunko-extractor"
repository = "https://github.com/hpprc/aozorabunko-extractor"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
konoha = "^4.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
aozorabunko-extractor = "aozorabunko_extractor.cli:main"
[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
